Website: fix gaps in chart
If you place the cursor on a mark and between chart rows, no row is
selected. This can cause flickering effects (see commit
37366aa3ca647dcc81c4e4f97d18207e4add05bf).

Fix selection by making the row have mouse hit testing priority over
marks.

--- a/website/public/benchmarks/benchmark.css
+++ b/website/public/benchmarks/benchmark.css
@@ -273,20 +273,23 @@ body.javascript .javascript-only {
 .chart .tick .marker {
   z-index: 1;
 }
-.chart .series .bar {
-  z-index: 2;
+.chart .series {
+  z-index: 2; /* For mouse events, not visuals. */
 }
-.chart .series .error-bars {
+.chart .series .bar {
   z-index: 3;
 }
-.chart .tick .label {
+.chart .series .error-bars {
   z-index: 4;
 }
-.chart .series .label {
+.chart .tick .label {
   z-index: 5;
 }
-.chart .log-scale {
+.chart .series .label {
   z-index: 6;
+}
+.chart .log-scale {
+  z-index: 7;
 }
 
 .benchmark-table {
